# lcd

./: .copier-answers.yml  Cargo.toml  Readme.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: msrv.yml
examples/: .rs
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.IntoApp.js  trait.Parser.js  trait.Subcommand.js
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/core/str/traits/: trait.FromStr.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
lcd/: all.html  fn.flatten_vec_tuple.html  fn.get_target_reads.html  fn.populate_buffer.html  fn.set_nb_threads.html  index.html  sidebar-items.js
lcd/clean/: fn.clean.html  fn.main.html  index.html  sidebar-items.js
lcd/cli/: enum.OutputFormat.html  enum.SubCommand.html  fn.i82level.html  index.html  sidebar-items.js  struct.Command.html  struct.SubCommandClean.html  struct.SubCommandCoverage.html  struct.SubCommandDetect.html  struct.SubCommandFilter.html
lcd/coverage/: fn.coverage.html  fn.main.html  index.html  sidebar-items.js
lcd/detect/: fn.detect.html  fn.main.html  index.html  sidebar-items.js
lcd/error/: enum.Cli.html  enum.Error.html  enum.IO.html  index.html  sidebar-items.js  type.Result.html
lcd/filter/: fn.filter.html  fn.main.html  index.html  sidebar-items.js
lcd/io/: fn.count_kmer.html  fn.get_reader.html  fn.get_writer.html  index.html  sidebar-items.js
lcd/read2gap/: index.html  sidebar-items.js  struct.Read2Gap.html
src/: clean.rs  cli.rs  coverage.rs  detect.rs  error.rs  filter.rs  io.rs  lib.rs  main.rs  read2gap.rs  types.rs
src/cli/: coverage.rs
src/lcd/: clean.rs.html  cli.rs.html  coverage.rs.html  detect.rs.html  error.rs.html  filter.rs.html  io.rs.html  lib.rs.html  read2gap.rs.html
