[package]
name = "lcd"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
description = "LCD: Low Coverage Detection, use kmer count to detect low coverage part of read"
edition = "2021"


[lib]
name = "lcd"
crate-type = ["rlib", "cdylib", "staticlib"]


[dependencies]
cocktail       = { git = "https://github.com/natir/cocktail.git" }
pcon	       = { git = "https://github.com/natir/pcon.git" }
ndarray        = { version = "0.15", features = ["rayon"] }
ndarray-stats  = "0.5"


# other stuff
rustc-hash     = "1"
itertools      = "0.10"

# parallel
rayon          = "1"

# input output management
noodles        = { version = "0.18", features = ["fasta"]}
niffler	       = { version = "2", features = ["bz2", "lzma", "gz"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# CLI management
clap           = { version = "3", features = ["derive"] }

# Logging and error management
log 	       = "0.4"
thiserror      = "1"
env_logger     = "0.9"


[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true