[package]
name = "LCD"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"
description = "LCD: Low Coverage Detection, use kmer count to detect low coverage part of read"
rust-version = "1.65"

homepage = "https://github.com/natir/LCD"
repository = "https://github.com/natir/LCD"
documentation = "https://natir.github.io/LCD/LCD"

readme = "Readme.md"
license-file = "LICENSE"


[dependencies]
# CLI management
clap           = { version = "4", features = ["derive"] }


# Error management
thiserror      = { version = "1" }
anyhow         = { version = "1"}


# Logging and error management
log            = { version = "0.4" }
stderrlog      = { version = "0.5" }
[dev-dependencies]
criterion      = { version = "0.4" }

[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true